--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Caro_WPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        x:Name="window"
+        Title="MainWindow" Height="800" Width="800"  >
+    <DockPanel>
+        
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="_Save" x:Name="saveButton" Click="saveButton_Click"/>
+            <MenuItem Header="_Load" x:Name="loadButton" Click="loadButton_Click"/>
+            <MenuItem Header="_Change Size" x:Name="changeSizeButton" Click="changeSizeButton_Click"/>
+            <MenuItem Header="_Restart" x:Name="restartButton" Click="restartButton_Click"/>
+        </Menu>
+        <Grid x:Name="grid" DockPanel.Dock="Bottom" SizeChanged="Grid_SizeChanged" MouseDown="grid_MouseDown">
 
-    </Grid>
+        </Grid>
+    </DockPanel>
 </Window>
