--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Caro_WPF"
         mc:Ignorable="d"
         x:Name="window"
-      
+        WindowStartupLocation="CenterScreen"
         Title="MainWindow" Height="800" Width="800"  >
     
     <DockPanel>
