--- a/SizeChangeWindow.xaml
+++ b/SizeChangeWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Caro_WPF"
         mc:Ignorable="d"
+        WindowStartupLocation="CenterScreen"
         Title="SizeChangeWindow" Height="300" Width="300">
     <Window.Resources>
         <ControlTemplate x:Key="validationTemplate">
